<resources>
    <string name="app_name">MobileDevTermProj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="done">DONE</string>
    <string name="enter_question_1">Enter Question</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="enter_choices">Enter Choices</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="add">ADD</string>
</resources>
