<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewQOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/enter_question_1"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/questionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewQOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/question"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/answerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionOne"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/answer"
        android:minHeight="48dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerOne"
        android:layout_marginTop="50dp"
        android:text="@string/enter_choices"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/choiceOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTwo"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/choice_1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/choiceTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choiceOne"
        android:ems="10"
        android:hint="@string/choice_2"
        android:minHeight="48dp"
        android:autofillHints="" />


    <EditText
        android:id="@+id/choiceThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choiceTwo"
        android:ems="10"
        android:hint="@string/choice_3"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choiceThree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAdd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/done"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold" />







</RelativeLayout>